# personal_website

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.proxy  Dockerfile.remote  Makefile  README.md  docker-compose.yml  nginx.conf  webhook_handler_demo_config.yml
.github/: dependabot.yml
.github/workflows/: ci.yml
config/: Dockerfile  Dockerfile.proxy  Dockerfile.remote  nginx.proxy.conf
github_webhook_handler/: Cargo.toml  Dockerfile  delete_local_tags.sh  delete_remote_tags.sh  example.env
github_webhook_handler/src/: docker.rs  github.rs  main.rs  router.rs  verify.rs  worker.rs
src/: inner_body.rs  long_text.txt  main.rs
src/blog/: inner_body.rs  mod.rs
src/command/: build.rs
src/index/: employment.rs  footer.rs  inner_body.rs  mod.rs  navbar.rs  project.rs
src/utils/: footer.rs  header.rs  mod.rs  navbar.rs
src/website/: mod.rs
src/website/blog/: ideas_around_wasm.rs  inner_body.rs  mod.rs
src/website/index/: inner_body.rs  mod.rs
src/website/utils/: footer.rs  header.rs  navbar.rs
src/website/widget/: custom_document.rs  mod.rs
src/widget/: custom_document.rs  ferris.rs  seperator.rs
static/: styles.css
website/: .dockerignore  Dockerfile  angular.json  astro.config.mjs  nginx.conf  package-lock.json  package.json
website/src/: index.html  styles.scss
website/src/app/: app.component.html  app.component.scss  app.component.ts  app.routes.ts
website/src/app/components/: components.module.ts
website/src/app/components/ferris/: ferris.component.html  ferris.component.scss  ferris.component.ts
website/src/app/components/footer/: footer.component.html  footer.component.ts
website/src/app/components/link/: link.component.html  link.component.ts
website/src/app/components/navbar/: navbar.component.html  navbar.component.scss  navbar.component.ts
website/src/app/components/separator/: separator.component.scss
website/src/app/pages/blogs/: blogs.component.html
website/src/app/pages/home/: description-link.pipe.ts  home.component.html  home.component.ts
website/src/app/pages/home/list-item/: list-item.component.html  list-item.component.ts
website/src/app/pages/projects/: projects.component.html  projects.component.ts
website/src/components/: ExternalLink.astro  Footer.astro  Navbar.astro  Project.astro  Separator.astro  WorkItem.astro
website/src/components/programming_logos/: Docker.astro  Java.astro  JavaScript.astro  Python.astro  Rust.astro
website/src/components/technology/: Docker.astro  Dynamic.astro  Groovy.astro  JavaScript.astro  PostgreSQL.astro  Python.astro  Redis.astro  Ruby.astro
website/src/layouts/: Layout.astro
website/src/pages/: blogs.astro  index.astro  projects.astro
website2/: package-lock.json
website2/src/components/: AgeSpan.astro  ExternalLink.astro  Footer.astro  Navbar.astro  RustLogo.astro  WorkItem.astro
website2/src/layouts/: Layout.astro
website2/src/pages/: index.astro  projects.astro
