[workspace]
members = ["github_webhook_handler"]

[package]
name = "melcher_io"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
chrono = "0.4.35"
clap = { version = "4.5.7", features = ["derive"] }
#! html-site-generator = { version = "0.0.1", path = "../html-site-generator" }
html-site-generator = { git = "https://github.com/letsmelon/html-site-generator", rev = "b12e728d32bada592f6b9f0606cc064eaf2d43b9" }
