[workspace]
members = ["github_webhook_handler"]

[package]
name = "melcher_io"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.94"
chrono = "0.4.38"
clap = { version = "4.5.20", features = ["derive"] }
#! html-site-generator = { version = "0.0.1", path = "../html-site-generator" }
html-site-generator = { git = "https://github.com/letsmelon/html-site-generator", rev = "6adbe8b7b8129fab220c68b84c089a16acff71ee" }
