[package]
name = "github_webhook_handler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
axum = "0.7.5"
bollard = { version = "0.16.0", features = ["buildkit"] }
bytes = "1.6.1"
dotenv = "0.15.0"
flate2 = "1.0.30"
futures-util = "0.3.30"
hex = "0.4.3"
hmac = "0.12.1"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
sha2 = "0.10.8"
tar = "0.4.41"
tokio = { version = "1.41.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["compression-full", "cors", "trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[dev-dependencies]
hex-literal = "0.4.1"
